cppcheck_report.txt
src/RpiInterrupter.cpp:284:16: style: Local variable 'v' shadows outer argument [shadowArgument]
    const bool v = _set_gpio_value(v, fd);
               ^
src/RpiInterrupter.cpp:280:68: note: Shadowed declaration
void RpiInterrupter::_set_gpio_value(const int gpioPin, const bool v) {
                                                                   ^
src/RpiInterrupter.cpp:284:16: note: Shadow variable
    const bool v = _set_gpio_value(v, fd);
               ^
src/RpiInterrupter.cpp:284:36: error: Uninitialized variable: v [uninitvar]
    const bool v = _set_gpio_value(v, fd);
                                   ^
src/RpiInterrupter.cpp:284:18: style: Variable 'v' is assigned a value that is never used. [unreadVariable]
    const bool v = _set_gpio_value(v, fd);
                 ^
src/RpiInterrupter.cpp:345:33: style: Variable 'outevent' is assigned a value that is never used. [unreadVariable]
    struct epoll_event outevent = {0};
                                ^
src/RpiInterrupter.cpp:257:0: style: The function '_get_gpio_value' is never used. [unusedFunction]

^
src/RpiInterrupter.cpp:73:0: style: The function 'getInterrupts' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

